# AI-Interior-Design-Assistance

./: .gitignore
ai-interior-design/: package-lock.json  package.json
ai-interior-design-backend/: .env  Cargo.toml  confgEnv.sh
ai-interior-design-backend/src/: main.rs
ai-interior-design-backend/src/api/: handlers.rs
ai-interior-design-backend/src/models/: data_request.rs  mod.rs
ai-interior-design-backend/src/services/: ai_service.rs  image_service.rs  mod.rs
ai-interior-design-backend/src/utils/: errors.rs
ai-interior-design/src/: App.css  App.js
ai-interior-design/src/Components/ColorPicker/: ColorPicker.js
ai-interior-design/src/Components/DesignPreview/: DesignPreview.js
ai-interior-design/src/Components/FurnitureSelector/: FurnitureSelector.js
ai-interior-design/src/Components/RoomImageUpload/: RoomImageUpload.js
ai-interior-design/src/Components/SaveDesign/: SaveDesign.js
ai-interior-design/src/Components/Style selector/: StyleSelector.js
ai-interior-design/src/Styles/ColorPicker/: ColorPicker.css
ai-interior-design/src/Styles/DesignPreview/: DesignPreview.css
ai-interior-design/src/Styles/FurnitureSelector/: FurnitureSelector.css
ai-interior-design/src/Styles/RoomImageUpload/: RoomImageUpload.css
ai-interior-design/src/Styles/SaveDesign/: SaveDesign.css
ai-interior-design/src/Styles/Style selector/: StyleSelector.css
