[package]
name = "ai-interior-design-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0" # o rocket = "0.5"
opencv = "0.93.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features= ["full"] }
base64 = "0.22.1"

